# cocos2d-cpp

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.cmake  README.md
cmake/Modules/: FindFMOD.cmake  SelectModule.cmake  SetCompilerOptions.cmake
cocos/: Android.mk  CMakeLists.txt  cocos2d.cpp  cocos2d.h
cocos/2d/: CCAction.cpp  CCAction.h  CCActionCamera.cpp  CCActionCamera.h  CCActionCatmullRom.cpp  CCActionCatmullRom.h  CCActionEase.cpp  CCActionEase.h  CCActionGrid.cpp  CCActionGrid.h  CCActionGrid3D.cpp  CCActionGrid3D.h  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionManager.cpp  CCActionManager.h  CCActionPageTurn3D.cpp  CCActionPageTurn3D.h  CCActionProgressTimer.cpp  CCActionProgressTimer.h  CCActionTiledGrid.cpp  CCActionTiledGrid.h  CCActionTween.cpp  CCActionTween.h  CCAnimation.cpp  CCAnimation.h  CCAnimationCache.cpp  CCAnimationCache.h  CCAtlasNode.cpp  CCAtlasNode.h  CCAutoPolygon.cpp  CCAutoPolygon.h  CCCamera.cpp  CCCamera.h  CCCameraBackgroundBrush.cpp  CCCameraBackgroundBrush.h  CCClippingNode.cpp  CCClippingNode.h  (+96 more)
cocos/3d/: CCAABB.cpp  CCAABB.h  CCAnimate3D.cpp  CCAnimate3D.h  CCAnimation3D.cpp  CCAnimation3D.h  CCAnimationCurve.h  CCAnimationCurve.inl  (+35 more)
docs/: CODING_STYLE.md  doxygen.config  doxygen_white_book.config
extensions/: ExtensionDeprecated.h  cocos-ext.h
templates/: cocos2dx_files.json
tests/performance-tests/: CMakeLists.txt
tests/performance-tests/Classes/: AppDelegate.cpp  Profile.cpp  Profile.h
tests/performance-tests/Classes/tests/: BaseTest.cpp  BaseTest.h  PerformanceAllocTest.cpp  PerformanceAllocTest.h  PerformanceCallbackTest.cpp  PerformanceCallbackTest.h  PerformanceContainerTest.cpp  PerformanceContainerTest.h  PerformanceEventDispatcherTest.cpp  PerformanceEventDispatcherTest.h  PerformanceLabelTest.cpp  PerformanceLabelTest.h  PerformanceMathTest.cpp  PerformanceMathTest.h  PerformanceNodeChildrenTest.cpp  PerformanceNodeChildrenTest.h  PerformanceParticle3DTest.cpp  PerformanceParticle3DTest.h  PerformanceParticleTest.cpp  PerformanceParticleTest.h  PerformanceScenarioTest.cpp  PerformanceScenarioTest.h  PerformanceSpriteTest.cpp  PerformanceSpriteTest.h  PerformanceTextureTest.cpp  PerformanceTextureTest.h  VisibleRect.cpp  controller.cpp
tests/performance-tests/proj.android-studio/app/jni/: Android.mk
tests/performance-tests/proj.android/jni/: Android.mk
tests/performance-tests/proj.ios/: AppController.mm
tests/performance-tests/proj.linux/: main.cpp
tests/performance-tests/proj.mac/: main.cpp
tests/performance-tests/proj.win32/: performance-tests.vcxproj  performance-tests.vcxproj.filters
(+1171 files in other folders)
